--- a/grid.html
+++ b/grid.html
@@ -17,10 +17,10 @@
       <nav class="navbar">
         <ul>
           <li>
-            <a href="/Index.html">Card</a>
+            <a href="/index.html">Card</a>
           </li>
           <li>
-            <a href="/Grid.html">Grid</a>
+            <a href="/grid.html">Grid</a>
           </li>
         </ul>
       </nav>
