--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <nav class="navbar">
         <ul>
           <li>
-            <a href="/Index.html">Card</a>
+            <a href="Zuri-Flex_Grid-Task/index.html">Card</a>
           </li>
           <li>
-            <a href="/Grid.html">Grid</a>
+            <a href="Zuri-Flex_Grid-Task/grid.html">Grid</a>
           </li>
         </ul>
       </nav>
