--- a/grid.html
+++ b/grid.html
@@ -20,7 +20,7 @@
             <a href="index.html">Card</a>
           </li>
           <li>
-            <a href="/grid.html">Grid</a>
+            <a href="grid.html">Grid</a>
           </li>
         </ul>
       </nav>
