--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <nav class="navbar">
         <ul>
           <li>
-            <a href="/index.html">Card</a>
+            <a href="index.html">Card</a>
           </li>
           <li>
-            <a href="/grid.html">Grid</a>
+            <a href="grid.html">Grid</a>
           </li>
         </ul>
       </nav>
